// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PendingOverdueDocumentsList tests should load the details component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      currentPage={1}
      fixed={false}
      headerActionClickHandler={null}
      headerActionComponent={null}
      name="pending overdue documents"
      paginationComponent={null}
      renderSegment={true}
      rowActionClickHandler={[Function]}
      rows={Array []}
      seeAllComponent={
        <SeeAllButton
          clickHandler={[Function]}
          disabled={false}
          fluid={false}
        />
      }
      showMaxRows={5}
      singleLine={false}
      subtitle="Documents with pending loan requests, no available items and an active loan that's overdue."
      title="Pending Overdue Documents"
    />
  </Error>
</Loader>
`;

exports[`PendingOverdueDocumentsList tests should render documents 1`] = `
<PendingOverdueDocumentsList
  data={
    Object {
      "hits": Array [
        Object {
          "created": "2018-01-01T10:05:00.000Z",
          "id": 1,
          "metadata": Object {
            "abstracts": Array [
              Object {
                "value": "This is an abstract",
              },
            ],
            "authors": Array [
              Object {
                "full_name": "Jack E. Davis",
              },
            ],
            "edition": "ed. 1",
            "language": Array [
              "en",
            ],
            "pid": "docid-1",
            "title": Object {
              "title": "The Gulf: The Making of An American Sea",
            },
          },
          "pid": "document1",
          "updated": "2018-01-01T10:05:00.000Z",
        },
        Object {
          "created": "2018-01-01T10:05:00.000Z",
          "id": 2,
          "metadata": Object {
            "abstracts": Array [
              Object {
                "value": "This is an abstract",
              },
            ],
            "authors": Array [
              Object {
                "full_name": "Caroline Fraser",
              },
            ],
            "language": Array [
              "it",
            ],
            "pid": "docid-2",
            "title": Object {
              "title": "Prairie Fires: The American Dreams of Laura Ingalls Wilder",
            },
          },
          "pid": "document2",
          "updated": "2018-01-01T10:05:00.000Z",
        },
      ],
      "total": 2,
    }
  }
  fetchPendingOverdueDocuments={[Function]}
  showMaxEntries={5}
>
  <Loader>
    <Error>
      <ResultsTable
        currentPage={1}
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        name="pending overdue documents"
        paginationComponent={null}
        renderSegment={true}
        rowActionClickHandler={[Function]}
        rows={
          Array [
            Object {
              "ID": "document1",
              "Title": "The Gulf: The Making of An American Sea",
            },
            Object {
              "ID": "document2",
              "Title": "Prairie Fires: The American Dreams of Laura Ingalls Wilder",
            },
          ]
        }
        seeAllComponent={
          <SeeAllButton
            clickHandler={[Function]}
            disabled={false}
            fluid={false}
          />
        }
        showMaxRows={5}
        singleLine={false}
        subtitle="Documents with pending loan requests, no available items and an active loan that's overdue."
        title="Pending Overdue Documents"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={13}
                    >
                      <div
                        className="middle aligned thirteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Pending Overdue Documents"
                          subheader="Documents with pending loan requests, no available items and an active loan that's overdue."
                        >
                          <h3
                            className="ui header"
                          >
                            Pending Overdue Documents
                            <HeaderSubheader
                              content="Documents with pending loan requests, no available items and an active loan that's overdue."
                            >
                              <div
                                className="sub header"
                              >
                                Documents with pending loan requests, no available items and an active loan that's overdue.
                              </div>
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={3}
                    >
                      <div
                        className="right aligned three wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Table
              as="table"
              selectable={true}
              striped={true}
            >
              <table
                className="ui selectable striped table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Title",
                    ]
                  }
                  withRowAction={true}
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            collapsing={true}
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              collapsing={true}
                              width={2}
                            >
                              <th
                                className="collapsing two wide"
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              width={2}
                            >
                              <th
                                className="two wide"
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Title"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Title
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Title",
                    ]
                  }
                  rowActionClickHandler={[Function]}
                  rows={
                    Array [
                      Object {
                        "ID": "document1",
                        "Title": "The Gulf: The Making of An American Sea",
                      },
                      Object {
                        "ID": "document2",
                        "Title": "Prairie Fires: The American Dreams of Laura Ingalls Wilder",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="document1"
                        key="document1"
                      >
                        <tr
                          className=""
                          data-test="document1"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                data-test="btn-view-details-document1"
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  data-test="btn-view-details-document1"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-document1"
                            key="0-document1"
                          >
                            <td
                              className=""
                              data-test="ID-document1"
                            >
                              document1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Title-document1"
                            key="1-document1"
                          >
                            <td
                              className=""
                              data-test="Title-document1"
                            >
                              The Gulf: The Making of An American Sea
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="document2"
                        key="document2"
                      >
                        <tr
                          className=""
                          data-test="document2"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                data-test="btn-view-details-document2"
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  data-test="btn-view-details-document2"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-document2"
                            key="0-document2"
                          >
                            <td
                              className=""
                              data-test="ID-document2"
                            >
                              document2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Title-document2"
                            key="1-document2"
                          >
                            <td
                              className=""
                              data-test="Title-document2"
                            >
                              Prairie Fires: The American Dreams of Laura Ingalls Wilder
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={2}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      clickHandler={[Function]}
                      disabled={false}
                      fluid={false}
                    />
                  }
                  showMaxRows={5}
                />
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</PendingOverdueDocumentsList>
`;

exports[`PendingOverdueDocumentsList tests should render show a message with no documents 1`] = `
<PendingOverdueDocumentsList
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  fetchPendingOverdueDocuments={[Function]}
  showMaxEntries={5}
>
  <Loader>
    <Error>
      <ResultsTable
        currentPage={1}
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        name="pending overdue documents"
        paginationComponent={null}
        renderSegment={true}
        rowActionClickHandler={[Function]}
        rows={Array []}
        seeAllComponent={
          <SeeAllButton
            clickHandler={[Function]}
            disabled={false}
            fluid={false}
          />
        }
        showMaxRows={5}
        singleLine={false}
        subtitle="Documents with pending loan requests, no available items and an active loan that's overdue."
        title="Pending Overdue Documents"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={13}
                    >
                      <div
                        className="middle aligned thirteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Pending Overdue Documents"
                          subheader="Documents with pending loan requests, no available items and an active loan that's overdue."
                        >
                          <h3
                            className="ui header"
                          >
                            Pending Overdue Documents
                            <HeaderSubheader
                              content="Documents with pending loan requests, no available items and an active loan that's overdue."
                            >
                              <div
                                className="sub header"
                              >
                                Documents with pending loan requests, no available items and an active loan that's overdue.
                              </div>
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={3}
                    >
                      <div
                        className="right aligned three wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Message
              data-test="no-results"
            >
              <div
                className="ui message"
                data-test="no-results"
              >
                There are no 
                pending overdue documents
                .
              </div>
            </Message>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</PendingOverdueDocumentsList>
`;
